# geospatial-sfc

./: .gitignore  CMakeLists.txt  Encoder.h  LICENSE  README.md  hilbert.cpp  main.cpp
.github/workflows/: cmake.yml
